--- a/readme.adoc
+++ b/readme.adoc
@@ -3,6 +3,7 @@
 image:https://img.shields.io/github/v/tag/foxcapades/go-bytify[GitHub tag (latest SemVer)]
 image:https://img.shields.io/github/go-mod/go-version/foxcapades/go-bytify[GitHub go.mod Go version]
 image:https://img.shields.io/github/license/foxcapades/go-bytify[GitHub]
+image:https://img.shields.io/badge/api-docs-ff69b4[title="API Docs", link=https://pkg.go.dev/github.com/foxcapades/go-bytify@v0.2.0/v0/bytify]
 image:https://github.com/Foxcapades/go-bytify/workflows/Go/badge.svg[Go]
 image:https://codecov.io/gh/Foxcapades/go-bytify/branch/main/graph/badge.svg?token=E4WD9IURJL[title=codecov, link=https://codecov.io/gh/Foxcapades/go-bytify]
 
