update with release info

--- a/readme.adoc
+++ b/readme.adoc
@@ -57,6 +57,39 @@ The cycles/iterations used is 100 cycles of 10,000,000 iterations each (meaning
 Only the last 3 releases will be shown here.  For further info see the
 link:docs/releases.txt[`docs/releases.txt`] file.
 
+`v0.3.0`::
+Added the following feature complete methods with full test coverage:
++
+.Serialization Methods
+[cols="1m,4m",options="header"]
+|===
+| Type | Functions
+| int8 | Int8ToBytes(int8, []byte) uint8 +
+         Int8ToBuf(int8, io.Writer) uint8 +
+         Int8ToByteSlice(int8) []byte
+| int16 | Int16ToBytes(int16, []byte) uint8 +
+          Int16ToBuf(int16, io.Writer) uint8 +
+          Int16ToByteSlice(int16) []byte
+| int32 | Int32ToBytes(int32, []byte) uint8 +
+          Int32ToBuf(int32, io.Writer) uint8 +
+          Int32ToByteSlice(int32) []byte
+| int64 | Int64ToBytes(int64, []byte) uint8 +
+          Int64ToBuf(int64, io.Writer) uint8 +
+          Int64ToByteSlice(int64) []byte
+|===
++
+.Sizing Methods
+[cols="1m,4m",options="header"]
+|===
+| Type  | Functions
+| int8  | Int8StringSize(int8) uint8
+| int16 | Int16StringSize(int16) uint8
+| int32 | Int32StringSize(int32) uint8
+| int64 | Int64StringSize(int64) uint8
+|===
+
+There will be no breaking changes to these functions before v2.0.0 is released.
+
 `v0.2.0`::
 Added the following feature complete methods with full test coverage:
 +
